--- a/src/components/Home/Home.component.css
+++ b/src/components/Home/Home.component.css
@@ -13,7 +13,7 @@
 
 .home-title {
     font-weight: bold;
-    color: #d1d3d8;
+    color: black;
     font-family: "Playwrite IT Moderna", cursive;
 }
 
