--- a/src/components/Home/Home.component.css
+++ b/src/components/Home/Home.component.css
@@ -13,7 +13,7 @@
 
 .home-title {
     font-weight: bold;
-    color: black;
+    color: #0a0a0a;
     font-family: "Playwrite IT Moderna", cursive;
 }
 
@@ -59,38 +59,59 @@
     justify-content: center;
     border-radius: 30px;
     padding: 10px;
+    display: flex;
+    align-items: center;
 }
 
-.home-login-container{
+.home-login-container {
     background: #0d6dfb;
     padding: 30px;
     border-radius: 30px;
-    margin: 10px 0;
-
+    text-decoration: none;
+    display: inline-block;
+    cursor: pointer;
+    color: white;
+    transition: background 0.3s, color 0.3s;
 }
 
-.home-login-link{
+.home-login-container:hover {
+    background: rgba(255, 255, 255, 0.3);
+    color: #e00b48;
+}
+
+.home-login-link {
     color: rgba(255, 255, 255, 0.92);
     text-decoration: none;
     font-weight: bolder;
 }
 
-.home-or-container{
-    justify-content: center;
-    align-items: center;
-    margin: 0 10px; /* Add horizontal margins */
+.home-or-text {
+    margin: 20px;
+    color: white;
 }
 
-.home-register-container{
+.home-register-container {
     background: rgba(255, 255, 255, 0.78);
-    padding: 10px;
+    padding: 30px;
     border-radius: 30px;
+    text-decoration: none;
+    display: inline-block;
+    cursor: pointer;
+    color: black;
+    transition: background 0.3s, color 0.3s;
 }
 
-.home-register-link{
-    color: black;
-    text-decoration: none;
+.home-register-container:hover {
+    background: rgba(255, 255, 255, 0.3);
+    color: #e00b48;
 }
+
+.home-register-link {
+    color: inherit;
+    text-decoration: none;
+    font-weight: bolder;
+}
+
 
 .home-reports-title {
     color: #e4dcdc;
@@ -117,7 +138,7 @@
 .home-reports-table th,
 .home-reports-table td {
     padding: 10px;
-    border: 1px solid rgba(255, 255, 255, 0.3);
+    border: 2px solid rgba(1, 15, 31, 0.43);
     text-align: center;
     font-size: 1rem;
 }
