--- a/src/components/Ideas/Ideas.component.css
+++ b/src/components/Ideas/Ideas.component.css
@@ -82,27 +82,6 @@ body, html {
     margin-bottom: 15%; /* Ensure enough space for the actions */
 }
 
-.actions {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    position: absolute;
-    bottom: 5%;
-    right: 2%;
-}
-
-.likes-counter {
-    margin-top: 10px;
-    color: white;
-    cursor: pointer;
-    font-size: 1.5em;
-    display: flex;
-    align-items: center;
-}
-
-.likes-counter:hover {
-    color: #ff0000;
-}
 
 .modal-body ul {
     list-style-type: none;
@@ -136,5 +115,79 @@ body, html {
 }
 
 .idea-form {
-    margin-bottom: 20px;
+    margin-bottom: 7px;
 }
+
+.files-and-action {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 15px;
+}
+
+.files {
+    display: flex;
+    overflow-x: auto;
+    white-space: nowrap;
+    gap: 15px;
+    padding: 10px 0;
+    border-radius: 10px;
+}
+
+.file-item {
+    display: inline-flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    width: 100px;
+}
+
+.file-button {
+    background: none;
+    border: none;
+    cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+
+.file-icon {
+    width: 50px;
+    height: 50px;
+    margin-bottom: 5px;
+}
+
+.file-name {
+    font-size: 0.9em;
+    color: #000;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    width: 100%;
+}
+
+.actions {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-left: 20px;
+}
+
+.likes-counter {
+    margin-top: 10px;
+    color: white;
+    cursor: pointer;
+    font-size: 1.5em;
+    display: flex;
+    align-items: center;
+}
+
+.likes-counter:hover {
+    color: #ff0000;
+}
+
+.input-error {
+    border: 2px solid red;
+}
+
