--- a/src/components/Style/ModalStyle.component.css
+++ b/src/components/Style/ModalStyle.component.css
@@ -5,6 +5,7 @@
     background: linear-gradient(to right, rgba(33, 37, 41, 0.8), rgba(101, 117, 161, 0.64));
     border-radius: 15px;
     color: white;
+    height: fit-content;
 }
 
 .custom-modal .modal-header {
@@ -22,7 +23,7 @@
 .custom-modal .modal-body {
     padding: 20px;
     text-align: center;
-    max-height: 300px; /* Adjust this value as needed */
+    max-height: 320px; /* Adjust this value as needed */
     overflow-y: auto; /* Add scroll */
 }
 
