--- a/src/components/Style/ModalStyle.component.css
+++ b/src/components/Style/ModalStyle.component.css
@@ -14,6 +14,7 @@
 }
 
 .custom-modal .modal-title {
+    font-family: 'Roboto', sans-serif;
     font-size: 2em;
     font-weight: bold;
     color: white;
