--- a/src/components/UserAccount/UserAccount.component.css
+++ b/src/components/UserAccount/UserAccount.component.css
@@ -24,7 +24,7 @@
 }
 
 .user-page-title {
-    font-family: 'Playwrite IT Moderna', cursive;
+    font-family: 'Playfair Display', serif;
     font-size: 2.5em;
     font-weight: bold;
     color: white;
