--- a/src/components/Ideas/Ideas.component.css
+++ b/src/components/Ideas/Ideas.component.css
@@ -5,9 +5,17 @@ body, html {
     overflow-x: hidden;
 }
 
+.page-title {
+    font-family: 'Playfair Display', serif;
+    font-size: 4em;
+    font-weight: bold;
+    color: white;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+}
+
 .ideas-container {
     position: relative;
-    top: -48px; /* Adjust this value to match the height of your navbar */
+    top: -48px; /* Adjust this value to match the height of navbar */
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -28,14 +36,6 @@ body, html {
     padding: 5px;
     z-index: 1;
     box-sizing: border-box; /* Include padding and border in the element's total width and height */
-}
-
-.page-title {
-    font-family: 'Playwrite IT Moderna', cursive;
-    font-size: 4em;
-    font-weight: bold;
-    color: white;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
 
 .create-idea-button {
