TOP3 correction and with scoring + every week u[date the score and top contributors. every user has its average rating from all posts

--- a/src/components/UserAccount/UserAccount.component.css
+++ b/src/components/UserAccount/UserAccount.component.css
@@ -48,8 +48,9 @@
 }
 
 .user-achievements{
+    font-weight: bold;
     font-size: 1.5rem;
-    color: black;
+    color: rgba(255, 0, 0, 0.62);
 }
 
 .user-ideas,
@@ -124,7 +125,8 @@
     color: white;
 }
 
-.like-click {
+.like-click,
+.rating-click{
     cursor: pointer;
     color: #0970d6;
 }
