1. changing the Meet our team to about us. 2. cosmetics and adding terms and policy for about us and in the register 3. changing window name to the company name 4. adding env variables

--- a/src/components/Register/Register.component.css
+++ b/src/components/Register/Register.component.css
@@ -86,3 +86,29 @@
     font-size: 1rem;
     color: black;
 }
+
+.register-form-group {
+    margin-top: 15px;
+    color: rgba(1, 15, 31, 0.43);
+}
+
+#terms {
+    margin-right: 10px;
+}
+
+.lecturer-contact {
+    color: rgba(224, 11, 72, 0.87);
+    margin-top: 10px;
+    text-align: center;
+}
+
+.lecturer-contact a {
+    color: #007bff;
+    text-decoration: underline;
+}
+
+.lecturer-contact a:hover {
+    color: #0056b3;
+}
+
+
