--- a/src/components/Ideas/Ideas.component.css
+++ b/src/components/Ideas/Ideas.component.css
@@ -189,3 +189,11 @@ body, html {
 .input-error {
     border: 2px solid red;
 }
+
+.engagement-info {
+    display: block;
+    line-height: 1.5; /* Adjusts the space between the lines */
+    margin-top: 10px;
+    color: #0e0f10;
+    text-align: center;
+}
