--- a/src/components/UserAccount/UserAccount.component.css
+++ b/src/components/UserAccount/UserAccount.component.css
@@ -73,7 +73,7 @@
     font-weight: bold;
     background: linear-gradient(to right, #010f1f, rgba(42, 82, 152, 0.67)); /* Modern gradient background */
     border-radius: 10px;
-    font-family: "Playwrite IT Moderna", cursive;
+    font-family: 'Playfair Display', serif;
 }
 
 .user-ideas-table-wrapper,
@@ -100,7 +100,7 @@
     padding: 10px;
     border: 2px solid rgba(1, 15, 31, 0.43);
     text-align: center;
-    font-size: 1.1rem;
+    font-size: 1rem;
     background: rgba(33, 37, 41, 0.79);
     color: white;
     word-break: break-word; /* Ensures that long words break properly */
@@ -113,7 +113,7 @@
     color: black;
     padding: 10px;
     border: 2px solid rgba(1, 15, 31, 0.43);
-    font-size: 1rem;
+    font-size: 0.9rem;
     word-break: break-word; /* Ensures that long words break properly */
     overflow-wrap: break-word; /* Ensures that long words break properly */
 }
