font style in user profile

--- a/src/components/UserAccount/UserAccount.component.css
+++ b/src/components/UserAccount/UserAccount.component.css
@@ -58,7 +58,7 @@
 .top-contributors {
     margin-top: 40px;
     background: rgba(187, 209, 235, 0.91);
-    padding: 20px;
+    padding: 5px 5px 10px;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
